opam-version: "1.2"
name: "Parsynt"
version: "0.1"
maintainer: "Victor Nicolet <victorn@cs.toronto.ed"
author: "Victor Nicolet <victorn@cs.toronto.edu>"
homepage: "http://www.cs.totonto.edu/~victorn/parsynt/"
bug-reports: "http://www.github.com/victornicolet/parsynt/issues"
license: ""
dev-repo: "http://www.github.com/victornicolet/parsynt"
build: [
  ["./configure" "--prefix=%{prefix}%"]
  [make]
]
install: [make "install"]
remove: ["ocamlfind" "remove" "project"]
depends: "ocamlfind"
