cmake_minimum_required(VERSION 3.5)
project(NestedLoopsExperiments)

link_libraries(tbb)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -ltbb -fopenmp")

set(SOURCE_FILES gradient1.cpp)
# All experiment executables start with prefix Exp
add_executable(Exp2DSum sum2d.cpp StopWatch.cpp StopWatch.h param.h)
add_executable(Exp2DSorted sorted2d.cpp StopWatch.cpp StopWatch.h param.h)
add_executable(ExpGradient1 gradient1.cpp StopWatch.cpp StopWatch.h param.h)
add_executable(ExpGradient2 gradient2.cpp StopWatch.cpp StopWatch.h param.h)
add_executable(ExpMinMax minmax.cpp StopWatch.cpp StopWatch.h param.h)
add_executable(ExpMaxDist max_dist.cpp StopWatch.cpp StopWatch.h param.h)
add_executable(ExpMinMaxCol minmax_col.cpp StopWatch.cpp StopWatch.h param.h)
add_executable(ExpMaxLeftRect max_left_rec.cpp StopWatch.cpp StopWatch.h param.h)
add_executable(ExpMaxTopStrip max_top_strip.cpp StopWatch.cpp StopWatch.h param.h)
add_executable(ExpMaxBottomStrip max_bottom_strip.cpp StopWatch.cpp StopWatch.h param.h)
add_executable(ExpMaxSegStrip max_seg_strip.cpp StopWatch.cpp StopWatch.h param.h)
add_executable(ExpMaxTopBox max_top_box.cpp StopWatch.cpp StopWatch.h param.h)
add_executable(ExpMaxBottomBox max_bot_box.cpp StopWatch.cpp StopWatch.h param.h)
add_executable(ExpMaxSegBox max_seg_box.cpp StopWatch.cpp StopWatch.h param.h)
add_executable(ExpMTLR mtlr.cpp StopWatch.h StopWatch.cpp param.h)
add_executable(ExpMTRR mtrr.cpp StopWatch.h StopWatch.cpp param.h)
add_executable(ExpSaddlePoint saddle_point.cpp StopWatch.cpp StopWatch.h param.h)
add_executable(ExpMode mode.cpp StopWatch.cpp StopWatch.h param.h)
add_executable(ExpOverlapping overlapping_ranges.cpp StopWatch.h StopWatch.cpp param.h)